# agent-llm-service

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: docs.yml
architecture/: index.html
docs/: architecture.md  how-to-use.md  in-depth-guide.md  index.md
how-to-use/: index.html
in-depth-guide/: index.html
playground/: example1.py  example2.py  example3.py
search/: search_index.json
src/agent_llm_service/: __init__.py  llm_execution_pool.py  llm_runner.py
src/agent_llm_service/core/: llm_execution_pool.py  llm_runner.py
src/agent_llm_service/models/: __init__.py  llm_provider_config.py
src/agent_llm_service/provider/llm/: base.py  raw_llm_provider.py
src/agent_llm_service/providers/: __init__.py  base.py  default_configs.py  raw_llm_provider.py
src/agent_llm_service/schemas/: config.py
src/agent_llm_service/tools/: base_tool.py  registry.py
src/agent_llm_service/utils/: llm_provider_configs.py
