[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-llm-service"
version = "0.0.3"
description = "A GenAI project built with LangChain and modern Python tools"
readme = "README.md"
authors = [{ name = "Suraj Airi", email = "surajairi.ml@gmail.com" }]
license = { text = "MIT license" }
requires-python = ">=3.12"
keywords = ["ai", "agent", "tools", "executor", "llm"]
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[project.urls]
Homepage = "https://github.com/surajairi/agent-llm-service"
Repository = "https://github.com/surajairi/agent-llm-service"
Issues = "https://github.com/surajairi/agent-llm-service/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
